--- a/carrito-compras-app/package.json
+++ b/carrito-compras-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carrito-compras-enf-app",
+  "name": "carrito-compras-app",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
